Debug JIT errors to comply with LKQL testsuite
Change-Id: Ib76bcc31450d28511f17bb7781499113a71623e5